--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+body {
+  background-color: #ebebeb;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+main > div {
+  width: 23%;
+  padding: 10px;
+  margin: 10px;
+  border: 2px solid #777777;
+  border-radius: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main > div > img {
+  height: 200px;
+  /* width: 100% */
+}
+
+main > div:nth-child(even) {
+  background-color: aliceblue;
+}
+
+main > div:nth-child(odd) {
+  background-color: bisque;
+}
+
+main > div:first-child {
+  background-color: pink;
 }
